--- a/views/allReviews.handlebars
+++ b/views/allReviews.handlebars
@@ -30,8 +30,8 @@
 
                           </div> --}}
 <form action="#">
-      <label for="lang">Language</label>
-      <select name="languages" id="strainOpt">
+      <label for="strainOpt">Choose a language:</label>
+      <select name="languages" id="strainOpt" required>
         <option value="javascript">JavaScript</option>
         <option value="php">PHP</option>
         <option value="java">Java</option>
