got user review to post to db and reviews page.

--- a/views/allReviews.handlebars
+++ b/views/allReviews.handlebars
@@ -23,13 +23,13 @@
                           </div>
 
 <!-- Strain Title -->
-                          {{!-- <div>
+                          <div>
                     
                             <textarea type="text" name="strain_id" id="srain_title"
                                 placeholder="Which strain are you reviewing?" required></textarea>
 
-                          </div> --}}
-<form action="#">
+                          </div>
+{{!-- <form action="#">
       <label for="lang">Language</label>
       <select name="languages" id="strainOpt">
         <option value="javascript">JavaScript</option>
@@ -41,7 +41,8 @@
         <option value="C++">C++</option>
         <option value="erlang">Erlang</option>
       </select>
-</form>
+</form> --}}
+
 <!-- Rev Buttons -->
 
                     </div>
