Review Post updates - non- Lori edition

--- a/views/allReviews.handlebars
+++ b/views/allReviews.handlebars
@@ -67,15 +67,15 @@
     </select>
 <!-- Rev Buttons -->
 
-                    </div>
+                    {{!-- </div> --}}
 
-                        <div class="buttonrow">
+                        {{!-- <div class="buttonrow">
                             <button type="button" id="rating" class="ratebutton" #"1">1</button>
                             <button type="button" id="rating" class="ratebutton" #"2">2</button>
                             <button type="button" id="rating" class="ratebutton" #"3">3</button>
                             <button type="button" id="rating" class="ratebutton" #"4">4</button>
                             <button type="button" id="rating" class="ratebutton" #"5">5</button>
-                        </div>
+                        </div> --}}
 
 <!-- Rev Text -->
 
@@ -106,7 +106,7 @@
                     {{!-- todo add cards here --}}
                     <div class="topCard">
                     <h2>{{{review.title}}}</h2>
-                    <h3>{{{review.rating}}} stars</h3>
+                    <h3>{{{review.user_name}}}</h3>
                     {{!-- <h3>{{{review.strain_id}}}</h3> --}}
 
                     </div>
