Adding user details to review post - working

--- a/views/verifyAge.handlebars
+++ b/views/verifyAge.handlebars
@@ -11,7 +11,7 @@
 
 <body>
     <div id="verifyAge">
-        <form action="/login" method="get" class="boxBorder">
+        <form action="/verifyAge" method="post" class="boxBorder">
             <div class="mb-3 form-check">
                 <div id="headInfo">
                     <h1>Slow down there,</h1>
