Please review minor changes before merge,  added withAuth, still working out cookie bug.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -113,6 +113,10 @@ h4 {
     text-align: center;
 }
 
+.twentyOne span {
+    color: var(--dark-green);
+}
+
 /* Signup Page CSS */
 #signupForm {
     padding: 4% 5%;
