--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,8 +35,8 @@
   </footer>
 
   <!-- Only include the logout script if the user is logged in -->
-  {{#if loggedIn}}
+  {{!-- {{#if loggedIn}} --}}
   <script src="/js/logout.js"></script>
-  {{/if}}
+  {{!-- {{/if}} --}}
 </body>
 </html>
