--- a/views/verifyAge.handlebars
+++ b/views/verifyAge.handlebars
@@ -18,7 +18,7 @@
                     <h1>Blaze</h1>
                     <br>
                     <h1>We need to know..</h1>
-                    <h1>Are you at least <b>21</b> years old?</h1>
+                    <h1 class="twentyOne">Are you at least <b>21</b> years old?</h1>
                 </div>
                 <div id="radioBtnDiv">
                     <div class="form-check form-check-inline">
