--- a/views/allReviews.handlebars
+++ b/views/allReviews.handlebars
@@ -2,18 +2,14 @@
   {{!-- add with auth here --}}
 
    <div id="allReviewSection" class="d-flex flex-column gap-3">
-
         <div id="allReviews">
             <h5 id="head" class="wgBorder">WELCOME TO THE WEED FEED</h5>
             <div id="allReviewSection" class="d-flex flex-column gap-3">
-
             <div id="revSec">
-                
                     <div id="postRev">
                         <div id="postRevHead" class="wgBorder">
                             <h5>Thoughts? Write 'em here.</h5>
                         </div>
-
               <form class="postReview">
                         
 <!-- Rev Title -->
@@ -22,7 +18,7 @@
                             <textarea name="title" id="title" placeholder="Review Title"></textarea>
                           </div>
 
- <select name="strains" id="strains">
+    <select name="strains" id="strains">
     {{#each strains as |strain|}}
         <option value={{strain.id}}>{{strain.name}}</option>
     {{/each}}
@@ -33,7 +29,6 @@
                         <div>
                             <textarea id="content" placeholder="Write your review here, my dude." required></textarea>
                         </div>
-
                         <div>
 
 <!-- Submit Button -->
@@ -44,7 +39,7 @@
                         </div>
                   </div>
               </form>
-    </div>
+        </div>  
 
    
 
@@ -65,7 +60,7 @@
                     </div>
                     <div class="bottomCard">
                     <p>{{{review.content}}}</p>
-                    <p class="date">{{{review.timestamp}}}</p>
+                    <p class="date">{{{timestamp}}}</p>
                     </div>
                     </div>
                     </div>
@@ -74,7 +69,6 @@
 
 
                 </div>
-
             </div>
         </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
