--- a/views/allReviews.handlebars
+++ b/views/allReviews.handlebars
@@ -4,9 +4,9 @@
 
    <div id="allReviewSection" class="d-flex flex-column gap-3">
         <div id="allReviews">
-            <h5 id="head" class="wgBorder">WELCOME TO THE WEED FEED</h5>
+            <h2 id="head" class="reviewTopHead">WELCOME TO THE WEED FEED</h2>
             <div id="allReviewSection" class="d-flex">
-            <div id="revSec" class="container col-md-6 float-left revSec">
+            <div id="revSec" class="container col-md-6 col-sm-12 float-left revSec">
 
                     <div id="postRev">
                         <div id="postRevHead" class="headerTitle">
@@ -39,7 +39,7 @@
                     </form>
             </div>
         {{!-- Show all reviews --}}
-            <div id="showAllRev" class="col-md-6 float-right">
+            <div id="showAllRev" class="col-md-6 col-sm-12 float-right">
             {{#each reviews as |review| }}
             <div class="row align-center mb-5 reviews">
             <div class="col-md-12">
