--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,7 +2,7 @@
 
 <form class="form login-form">
   <div class="form-group">
-    <label for="username-login">email:</label>
+    <label for="username-login">username:</label>
     <input class="form-input" type="text" id="username-login" />
   </div>
   <div class="form-group">
@@ -15,6 +15,7 @@
 </form>
 
 <h2>Signup</h2>
+  <h5>Please login once you are signed up</h5>
     <form class="form signup-form">
       <div class="form-group">
         <label for="firstName-signup">First Name:</label>
